2016-07-04  Jerry DeLisle  <jvdelisle@gcc.gnu.org> 	    Steven G. Kargl  <kargl@gcc.gnu.org>

PR fortran/35849
	* simplify.c (gfc_simplify_ishftc): Check that absolute value of
	SHIFT is less than or equal to SIZE.

	* gfortran.dg: pr35849.f90: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@237993 138bc75d-0d04-0410-961f-82ee72b054a4